# cs_chat

./: .gitignore  README.md
Client/: cli.c  client
Server/: CMakeLists.txt  config.json  data.db  main  main.c  test_command.json
Server/Common/: db.c  db.h  persistence.c  persistence.h  utils.c  utils.h
Server/Service/: account_service.c  account_service.h  insert.sql  msg_service.c  msg_service.h
cJSON_Learning/: create  create.c  parse  parse.c  test.json
